--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,7 +20,26 @@ body {
   text-align: center;
 }
 
+h2, p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 
 .search-input {
   width: 272px;
@@ -32,6 +51,7 @@ body {
   border: 1px solid #808080;
   border-radius: 4px;
   margin-right: 8px;
+  margin-bottom: 30px;
   font-family: inherit;
   cursor: pointer;
 }
@@ -62,3 +82,62 @@ body {
 .search-button:hover {
   background: #6C8CFF;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.gallery-card {
+  border: 1px solid #808080;
+  width: 360px;
+  height: 200px;
+}
+
+.discribe-box {
+  padding: 4px 25px 4px 20px;
+}
+
+.discribe-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.discribe-title {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.discribe-text {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid;
+  border-color: #FF3D00 transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
